--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "installDeps": "yarn && cd client && yarn"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.2",
     "child_process": "^1.0.2",
     "concurrently": "^3.5.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.9",
+    "express": "^4.15.5",
     "firebase": "^4.10.0",
-    "jade": "~1.11.0",
+    "jade": "^1.11.0",
     "js-cookie": "^2.2.0",
-    "mongoose": "^5.0.3",
-    "morgan": "~1.9.0",
+    "mongoose": "^5.0.6",
+    "morgan": "^1.9.0",
     "mysql": "^2.15.0",
-    "mysql2": "^1.5.1",
-    "sequelize": "^4.32.6",
-    "serve-favicon": "~2.4.5"
+    "mysql2": "^1.5.2",
+    "sequelize": "^4.33.4",
+    "serve-favicon": "^2.4.5"
   }
 }
